--- a/blogpost.html
+++ b/blogpost.html
@@ -5,12 +5,13 @@
     </head>
     <body>
         <div id="container">
+            <div id="cabecera">
+                Cabecera
+            </div>
             <div id="post">
-            </h1> es el titulo atractivo e interesante del post</h1>
+            </h1>Este es el titulo atractivo e interesante del post</h1>
             <p>Y este es el parafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
             </div>  
         </div>
-        <h1>Aqui vamos a hacer un blog post</h1>
-        <p>Y este es el parrafo de inicio</p>
     </body>
 </html>
